Fix main  margin-top on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -285,8 +285,8 @@ footer p a {
 @media (max-width: 600px) {
     /* welcome-section */
     #avatar {
-        margin-bottom: -2rem;
-        height: 240px;
+        margin-bottom: -1rem;
+        height: 210px;
     }
     
     #about-container {
